[tool.poetry]
name = "web-hw-8-mongo"
version = "0.1.0"
description = ""
authors = ["Revuka Oleksandr <a.revuka@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_8_mongo"}]

[tool.poetry.dependencies]
python = "^3.11"
configparser = "^6.0.0"
pymongo = "^4.4.1"
mongoengine = "^0.27.0"
redis-lru = "^0.1.2"
redis = "^4.6.0"
types-redis = "^4.6.0.3"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=130